--- a/Final_TMT_MSstats_analysis.Rmd
+++ b/Final_TMT_MSstats_analysis.Rmd
@@ -59,9 +59,74 @@ import_psm_data <- function(input_dir, file_list) {
 }
 
 # Function to prepare PD data for MSstatsWeightedSummary
-PDtoMSstatsWeightedSummary <- function(PSMs, annotations) {
-  
-  return(MSstatsTMT_input)
+PDtoMSstatsWeightedSummary <- function(psms, annotations) {
+  # Full peptide-protein graphs ----
+  psms <- as.data.table(psms)
+
+  # ## onePot
+  pp_orig <- unique(psms[, .(PeptideSequence = `Annotated.Sequence`, ProteinName = `Protein.Accessions`)])
+  pp <- cSplit(pp_orig, sep = "; ", direction = "long", drop = FALSE, splitCols = "ProteinName")
+  pp[, ProteinName := stringr::str_replace_all(ProteinName, "\\-1", "")]
+  pp_graph <- createPeptideProteinGraph(pp)
+  # # Cluster identification ----
+  # ## onePot
+  pp <- addClusterMembership(pp, pp_graph)
+  input_all_prots <- merge(psms, pp, by.x = "Annotated.Sequence", by.y = "PeptideSequence", allow.cartesian = T, all.x = T, all.y = T)
+  input_all_prots[, `Master.Protein.Accessions` := NULL]
+  input_all_prots[, `Protein.Accessions` := NULL]
+  # # MSstatsTMT pre-processing ----
+  ## onePot
+  procd <- MSstatsTMT::PDtoMSstatsTMTFormat(input_all_prots, annotations,
+    which.proteinid = "ProteinName",
+    useNumProteinsColumn = FALSE,
+    useUniquePeptide = FALSE,
+    rmPSM_withfewMea_withinRun = FALSE,
+    rmProtein_with1Feature = FALSE,
+    summaryforMultipleRows = max,
+    use_log_file = FALSE,
+    append = FALSE,
+    verbose = TRUE
+  )
+  procd <- as.data.table(procd)
+  # Process isoforms ---
+  # ## onePot
+  procd[, log2Intensity := log(Intensity, 2)]
+  graph_procd <- createPeptideProteinGraph(procd)
+  procd <- addClusterMembership(procd, graph_procd)
+  procd[, IsUnique := uniqueN(ProteinName) == 1, by = "PSM"]
+
+  ggplot(
+    procd,
+    aes(x = Channel, y = log2Intensity, group = PSM, color = IsUnique)
+  ) +
+    geom_line() +
+    theme_bw() +
+    facet_grid(~ProteinName) +
+    theme_bw()
+
+  procd_merge_single_identical <- processIsoforms(procd, T, T, F)
+  procd_merge_single_identical[, IsUnique := uniqueN(ProteinName) == 1, by = "PSM"]
+  ggplot(
+    procd_merge_single_identical,
+    aes(x = Channel, y = log2Intensity, group = PSM, color = IsUnique)
+  ) +
+    geom_line() +
+    theme_bw() +
+    facet_grid(~ProteinName) +
+    theme_bw()
+
+  # Optional steps:
+  # merging or filtering isoforms if there is not enough feature-level information
+  procd_iso <- processIsoforms(procd, T, T, F)
+  # Normalization (feature level, median-based)
+  procd_iso[, Intensity := 2^log2Intensity]
+  procd_iso <- normalizeSharedPeptides(procd_iso)
+  procd_iso_graph <- createPeptideProteinGraph(procd_iso)
+  procd_iso <- addClusterMembership(procd_iso, procd_iso_graph)
+  # Cluster statistics
+  procd_iso <- getClusterStatistics(procd_iso, TRUE)
+
+  return(procd_iso)
 }
 ```
 
@@ -99,91 +164,19 @@ contrast_matrix <- contrast_matrix[, -1]
 Preprocessing the TMT input using the shared peptide weighting method - based on the MWS reproduction github page:
 https://github.com/mstaniak/MWS_reproduction/blob/main/05_tpp_onepot_data_preparation.R
 ```{r Weighted input preprocessing}
-## Full peptide-protein graph
-# Get list of all protein.peptide combos
-peptide_proteins <- unique(as.data.table(PSMs)[, .(PeptideSequence = Annotated.Sequence, ProteinName = Protein.Accessions)])
-# Separate out protein groups into individual rows
-peptide_proteins <- separate_longer_delim(peptide_proteins, cols = ProteinName, delim = "; ") %>%
-  mutate(ProteinName = str_replace_all(ProteinName, "\\-1", "")) %>%
-  as.data.table()
-# Make the graph
-peptide_proteins_graph <- createPeptideProteinGraph(peptide_proteins)
-
-# Cluster identification
-peptide_proteins <- addClusterMembership(peptide_proteins, peptide_proteins_graph)
-# Recombine with PSMs to make full input
-all_proteins_input <- merge(
-  as.data.table(PSMs),
-  peptide_proteins,
-  by.x = "Annotated.Sequence",
-  by.y = "PeptideSequence",
-  allow.cartesian = T,
-  all.x = T,
-  all.y = T
-)
-# Remove the protein accessions columns
-all_proteins_input <- subset(all_proteins_input, select = -c(Protein.Accessions, Master.Protein.Accessions)) %>% as.data.frame()
-
-# Filtering and pre-processing
-MSstatsTMT_input = MSstatsTMT::PDtoMSstatsTMTFormat(
-  all_proteins_input,
-  annotations,
-  which.proteinid = "ProteinName",
-  useNumProteinsColumn = FALSE,
-  useUniquePeptide = FALSE,
-  rmPSM_withfewMea_withinRun = TRUE,
-  rmProtein_with1Feature = TRUE,
-  summaryforMultipleRows = max,
-  use_log_file = TRUE,
-  append = FALSE,
-  verbose = TRUE,
-  log_file_path = paste0(
-    output_dir,
-    "/logs/PDtoMSstatsTMTFormat_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  )
-)
-
-MSstatsTMT_input = as.data.table(MSstatsTMT_input)
-
-# Process isoforms
-MSstatsTMT_input[, log2Intensity := log(Intensity, 2)]
-processed_input_graph = createPeptideProteinGraph(MSstatsTMT_input)
-MSstatsTMT_input = addClusterMembership(MSstatsTMT_input, processed_input_graph)
-MSstatsTMT_input_iso = processIsoforms(MSstatsTMT_input, T, T, F)
-
-# Normalization ----
-MSstatsTMT_input_iso[, Intensity := 2 ^ log2Intensity]
-MSstatsTMT_input_iso = normalizeSharedPeptides(MSstatsTMT_input_iso)
-MSstatsTMT_input_iso_graph = createPeptideProteinGraph(MSstatsTMT_input_iso)
-MSstatsTMT_input_iso = addClusterMembership(MSstatsTMT_input_iso, MSstatsTMT_input_iso_graph)
-
-# Cluster statistics ----
-MSstatsTMT_input_iso = getClusterStatistics(MSstatsTMT_input_iso, TRUE)
-
-# Make input for next steps
-MSstatsTMT_input_tbl = MSstatsTMT_input_iso
-
-# Protein cluster processing and descriptive statistics ----
-MSstatsTMT_input_each_uni = MSstatsTMT_input_tbl[(HasUnique)]
-MSstatsTMT_input_each_uni[, IsUnique := uniqueN(ProteinName) == 1, by = "PSM"]
-MSstatsTMT_input_each_uni[, NumProteins := uniqueN(ProteinName), by = "Cluster"]
-MSstatsTMT_input_each_uni[, HasUnique := any(IsUnique), by = "ProteinName"]
-MSstatsTMT_input_each_uni = MSstatsTMT_input_each_uni[(HasUnique)]
-MSstatsTMT_input_each_uni[, IsUnique := uniqueN(ProteinName) == 1, by = "PSM"]
-MSstatsTMT_input_each_uni[, NumProteins := uniqueN(ProteinName), by = "Cluster"]
+# Process using weigthing for unique peptides using function derived from example code sent by Mateusz Staniak
+MSstatsTMT_input <- PDtoMSstatsWeightedSummary(PSMs[1:100, ], annotations)
 
 # Save the prepared data
-save(MSstatsTMT_input_each_uni, file = paste0(output_dir, "TMT_preprocessed_weighted.rda"))
+save(MSstatsTMT_input, file = paste0(output_dir, "TMT_preprocessed_weighted.rda"))
 ```
 
 # Weighted processing
 Processing the TMT input using the shared peptide weighting method
 ```{r Weighted input processing}
-# Protein level summarisation
+# Get protein summaries
 MSstats_summarised <- getWeightedProteinSummary(
-  MSstatsTMT_input_iso,
+  MSstatsTMT_input,
   norm = "p_norm",
   norm_parameter = 1,
   weights_mode = "contributions",
@@ -196,7 +189,6 @@ MSstats_summarised <- getWeightedProteinSummary(
   save_convergence_history = FALSE
 )
 
- # Format for group comparison input
 MSstatsTMT_processed <- makeMSstatsTMTInput(MSstats_summarised)
 
 # Save the processed data
@@ -206,101 +198,101 @@ save(MSstatsTMT_processed, file = paste0(output_dir, "TMT_processed_weighted.rda
 # Preprocessing
 Data preprocisseing using the original MSstatsTMT workflow
 ```{r Input preprocessing}
-# Format for `MSstatsTMT` input
-MSstatsTMT_input <- MSstatsTMT::PDtoMSstatsTMTFormat(
-  input = PSMs,
-  annotation = annotations,
-  which.proteinid = "Master Protein Accessions", # Default: Protein Accessions
-  useNumProteinsColumn = TRUE,
-  useUniquePeptide = TRUE,
-  rmPSM_withfewMea_withinRun = FALSE, # Default: TRUE
-  rmProtein_with1Feature = FALSE,
-  summaryforMultipleRows = sum,
-  use_log_file = TRUE,
-  append = FALSE,
-  verbose = TRUE,
-  log_file_path = paste0(
-    output_dir,
-    "/logs/PDtoMSstatsTMTFormat_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  )
-)
-
-# Briefly check input
-head(MSstatsTMT_input)
-
-# Count the number of proteins
-paste("There are", (MSstatsTMT_input$ProteinName %>% unique() %>% length()), "proteins in this dataset")
-
-# Save the prepared data
-save(MSstatsTMT_input, file = paste0(output_dir, "TMT_preprocessed.rda"))
+# # Format for `MSstatsTMT` input
+# MSstatsTMT_input <- MSstatsTMT::PDtoMSstatsTMTFormat(
+#   input = PSMs,
+#   annotation = annotations,
+#   which.proteinid = "Master Protein Accessions", # Default: Protein Accessions
+#   useNumProteinsColumn = TRUE,
+#   useUniquePeptide = TRUE,
+#   rmPSM_withfewMea_withinRun = FALSE, # Default: TRUE
+#   rmProtein_with1Feature = FALSE,
+#   summaryforMultipleRows = sum,
+#   use_log_file = TRUE,
+#   append = FALSE,
+#   verbose = TRUE,
+#   log_file_path = paste0(
+#     output_dir,
+#     "/logs/PDtoMSstatsTMTFormat_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   )
+# )
+#
+# # Briefly check input
+# head(MSstatsTMT_input)
+#
+# # Count the number of proteins
+# paste("There are", (MSstatsTMT_input$ProteinName %>% unique() %>% length()), "proteins in this dataset")
+#
+# # Save the prepared data
+# save(MSstatsTMT_input, file = paste0(output_dir, "TMT_preprocessed.rda"))
 ```
 
 # Data Processing
 This chunk processes the input data including normalisation, censored cutoff, cleaning, and protein-level summarization.
 Using the original MSstatsTMT method
 ```{r data processing, echo = FALSE}
-# Process the input
-MSstatsTMT_processed <- MSstatsTMT::proteinSummarization(
-  data = MSstatsTMT_input,
-  method = "msstats",
-  global_norm = TRUE,
-  reference_norm = TRUE,
-  remove_norm_channel = TRUE,
-  remove_empty_channel = TRUE,
-  MBimpute = TRUE,
-  maxQuantileforCensored = NULL,
-  use_log_file = TRUE,
-  append = FALSE,
-  verbose = TRUE,
-  log_file_path = paste0(
-    output_dir,
-    "/logs/proteinSummarization_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  ),
-  msstats_log_path = paste0(
-    output_dir,
-    "/logs/MSstats_proteinSummarization_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  )
-)
-
-# Save the processed data
-save(MSstatsTMT_processed, file = paste0(output_dir, "TMT_processed.rda"))
-
-# Repeat without normalisation for normalisation plot
-# Process the input - without normalisation
-MSstatsTMT_processed_no_normalisation <- MSstatsTMT::proteinSummarization(
-  data = MSstatsTMT_input,
-  method = "msstats",
-  global_norm = FALSE,
-  reference_norm = FALSE,
-  remove_norm_channel = TRUE,
-  remove_empty_channel = TRUE,
-  MBimpute = TRUE,
-  maxQuantileforCensored = NULL,
-  use_log_file = TRUE,
-  append = FALSE,
-  verbose = TRUE,
-  log_file_path = paste0(
-    output_dir,
-    "/logs/proteinSummarization_no_normalisation_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  ),
-  msstats_log_path = paste0(
-    output_dir,
-    "/logs/MSstats_proteinSummarization_no_normalisation_log_",
-    format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
-    ".txt"
-  )
-)
-
-# Save the processed data
-save(MSstatsTMT_processed_no_normalisation, file = paste0(output_dir, "TMT_processed_no_normalisation.rda"))
+# # Process the input
+# MSstatsTMT_processed <- MSstatsTMT::proteinSummarization(
+#   data = MSstatsTMT_input,
+#   method = "msstats",
+#   global_norm = TRUE,
+#   reference_norm = TRUE,
+#   remove_norm_channel = TRUE,
+#   remove_empty_channel = TRUE,
+#   MBimpute = TRUE,
+#   maxQuantileforCensored = NULL,
+#   use_log_file = TRUE,
+#   append = FALSE,
+#   verbose = TRUE,
+#   log_file_path = paste0(
+#     output_dir,
+#     "/logs/proteinSummarization_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   ),
+#   msstats_log_path = paste0(
+#     output_dir,
+#     "/logs/MSstats_proteinSummarization_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   )
+# )
+#
+# # Save the processed data
+# save(MSstatsTMT_processed, file = paste0(output_dir, "TMT_processed.rda"))
+#
+# # Repeat without normalisation for normalisation plot
+# # Process the input - without normalisation
+# MSstatsTMT_processed_no_normalisation <- MSstatsTMT::proteinSummarization(
+#   data = MSstatsTMT_input,
+#   method = "msstats",
+#   global_norm = FALSE,
+#   reference_norm = FALSE,
+#   remove_norm_channel = TRUE,
+#   remove_empty_channel = TRUE,
+#   MBimpute = TRUE,
+#   maxQuantileforCensored = NULL,
+#   use_log_file = TRUE,
+#   append = FALSE,
+#   verbose = TRUE,
+#   log_file_path = paste0(
+#     output_dir,
+#     "/logs/proteinSummarization_no_normalisation_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   ),
+#   msstats_log_path = paste0(
+#     output_dir,
+#     "/logs/MSstats_proteinSummarization_no_normalisation_log_",
+#     format(Sys.time(), "%Y_%m_%d_%H_%M_%S"),
+#     ".txt"
+#   )
+# )
+#
+# # Save the processed data
+# save(MSstatsTMT_processed_no_normalisation, file = paste0(output_dir, "TMT_processed_no_normalisation.rda"))
 ```
 
 # Data visualisation
@@ -329,7 +321,7 @@ These plots are from functions built-in to `MSstatsTMT` and are for quality cont
 
 ```{r model based comparison, echo = FALSE}
 # Run the test
-test_MSstatsTMT <- groupComparisonTMT(
+MSstatsTMT_test <- groupComparisonTMT(
   contrast.matrix = contrast_matrix,
   data = MSstatsTMT_processed,
   moderated = FALSE, # Steph: TRUE
@@ -348,7 +340,7 @@ test_MSstatsTMT <- groupComparisonTMT(
 )
 
 # Extracting the comparison results
-MSstatsTMT_results <- test_MSstatsTMT$ComparisonResult
+MSstatsTMT_results <- MSstatsTMT_test$ComparisonResult
 
 # Checking for outliers, results in which there is an infinite fold-change
 outliers <- which(MSstatsTMT_results$log2FC == Inf | MSstatsTMT_results$log2FC == -Inf)
