--- a/TMT_MSstats_analysis_original.Rmd
+++ b/TMT_MSstats_analysis_original.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(echo = TRUE)
 set.seed(44)
 
 # Set directories and annotations file name
-input_dir <- paste0(getwd(), "/TMT_input/")
-output_dir <- paste0(getwd(), "/TMT_output/")
+input_dir <- paste0(getwd(), "/TMT_input_no_isoforms/")
+output_dir <- paste0(getwd(), "/TMT_output_no_isoforms/")
 run_annotations_file <- "run_annotations.tsv"
-channel_annotations_file <- "channel_annotations.tsv"
-contrast_matrix_file <- "contrast_matrix.tsv"
+channel_annotations_file <- "channel_annotations_subgroups.tsv"
+contrast_matrix_file <- "contrast_matrix_subgroups.tsv"
 
 # Load packages
 library(MSstatsTMT) # Mass spec data statisitcal analysis
